Fixed spacing for titles followed by sub-titles.

--- a/css/styles.css
+++ b/css/styles.css
@@ -319,6 +319,8 @@ h4 {
   @media (max-width: 900px) {
     h4 {
       font-size: 2em; } }
+  h3 + h4 {
+    margin-top: -2rem; }
 
 h5 {
   font-size: 2em;
