--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -69,6 +69,10 @@ h4{
 
   margin-top: 4rem;
   margin-bottom: 3rem;
+
+  h3 + &{
+    margin-top: -2rem;
+  }
 }
 
 h1, h2, h3, h4{
